# MarquetteRMC2021

./: .gitmodules  README.md  find_all_test.py  main.py  main_test.py
Automation Test Code/: auto_dig.py  auto_dig_wrapper.py  auto_dump_test.py  auto_dump_wrapper.py  automation_test_code.txt
Depricated Files/: depricated.txt  human.py  test.py
GUI/: GUI.py  locomotion.py
Main/: digging.py  human.py  locomotion.py  main.py  states.py  test.py
Roboclaw/: .input_test.py.swp  input_test.py  roboclaw.txt  roboclaw_3.py
StepperController/: stepTest.py
catkin_ws/: catkin_ws.txt
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/install/: setup.sh
catkin_ws/src/main/: CMakeLists.txt  package.xml
catkin_ws/src/main/launch/: main.launch
catkin_ws/src/main/nodes/: digging.py  digging_wrapper.py  dumping.py  locomotion.py  main.py  main_wrapper.py
catkin_ws/src/main/srv/: FieldData.srv
digging/: README_digging.txt  digging.py  digging.txt  digging2.py
dumping/: README_dumping.txt  dumping.txt  stepTest.py
lidar/: README_lidar.txt
locomotion/: README_locomotion.txt  locomotion.py  locomotion.txt  locomotion2.py  locomotion3.py  locomotion_digging_test.py  no_listener_test.py  odrive_test.ipynb  ord_numbers.ipynb  test.py
main/: Digging_Automation.py  Dumping_Automation.py  auto_dump_test.py  auto_dump_wrapper.py  base_controller.py  digging.py  digging_indicator.py  digging_wrapper.py  dumping.py  dumping_indicator.py  dumping_wrapper.py  human.py  lidar_test.cpp  locomotion.py  locomotion_wrapper.py  main.launch  main.py  main.txt  main_wrapper.py  nodes.launch  roboclaw.py  ros_wrapper_locomotion.py  states.py  test.py
move_base/: base_controller.py  move_base.txt  odometry_source.py  odometry_wrapper.py
pololu-tic-1.8.1-linux-x86/: LICENSE.html  README.txt  install.sh  ticcmd
rosSensor_Node/: Angle_Sensor_Node.ino  Instructions on how to Interface Arduino w:ROS.rtf  ReadME.txt  Weight_Scale_Node.ino
rosSensor_Node/Angle_Sensor_Node/: Angle_Sensor_Node.ino
rosSensor_Node/Weight_Scale_Node/: Weight_Scale_Node.ino
rosSensor_Node/Weight_Test/Read_1x_load_cell/: Read_1x_load_cell.ino
ros_catkin_ws/: install_skip.sh  melodic-desktop-full.rosinstall
ros_catkin_ws/build_isolated/: catkin_make_isolated.cache
ros_catkin_ws/build_isolated/bond_core/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/catkin/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/class_loader/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/cmake_modules/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/common_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/common_tutorials/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/cpp_common/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/gencpp/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/geneus/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/genlisp/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/genmsg/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/gennodejs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/genpy/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros_catkin_ws/devel_isolated/bond_core/: .catkin  setup.sh
ros_catkin_ws/devel_isolated/catkin/: setup.sh
ros_catkin_ws/devel_isolated/class_loader/: .catkin  local_setup.sh
ros_catkin_ws/devel_isolated/cmake_modules/: .rosinstall
ros_catkin_ws/devel_isolated/common_msgs/: .catkin
ros_catkin_ws/devel_isolated/common_tutorials/: .catkin  .rosinstall
ros_catkin_ws/devel_isolated/cpp_common/: local_setup.sh  setup.sh
ros_catkin_ws/devel_isolated/gencpp/: local_setup.sh  setup.sh
ros_catkin_ws/devel_isolated/geneus/: .catkin  .rosinstall  local_setup.sh
ros_catkin_ws/devel_isolated/genmsg/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
ros_catkin_ws/devel_isolated/gennodejs/: .catkin  setup.sh
ros_catkin_ws/devel_isolated/genpy/: .catkin  .rosinstall
ros_catkin_ws/install/lib/: liborocos-kdl.so.1.4.0  libstage.so.4.3.0
ros_catkin_ws/logs/class_loader/: build.cmake.000.log.stderr
ros_catkin_ws/logs/cpp_common/: build.cmake.000.log.stderr
ros_catkin_ws/logs/orocos_kdl/: build.make.000.log.stderr
ros_catkin_ws/logs/python_orocos_kdl/: build.make.000.log.stderr
ros_catkin_ws/logs/rospack/: build.cmake.000.log.stderr  build.make.000.log.stderr
ros_catkin_ws/logs/rostime/: build.cmake.000.log.stderr
ros_catkin_ws/src/: .rosinstall
ros_catkin_ws/src/actionlib/: .tar
ros_catkin_ws/src/catkin/: .tar
ros_catkin_ws/src/control_toolbox/: .tar
ros_catkin_ws/src/genmsg/: .tar
ros_catkin_ws/src/genpy/: .tar
ros_catkin_ws/src/interactive_markers/: .tar
ros_catkin_ws/src/laser_filters/: .tar
ros_catkin_ws/src/python_qt_binding/: .tar
ros_catkin_ws/src/ros_environment/: .tar
ros_catkin_ws/src/rosconsole/: .tar
ros_catkin_ws/src/rospack/: .tar
ros_catkin_ws/src/rqt_image_view/: .tar
ros_catkin_ws/src/rqt_reconfigure/: .tar
ros_catkin_ws/src/rqt_robot_monitor/: .tar
ros_catkin_ws/src/rviz/: .tar
ros_catkin_ws/src/stage/: config.h
temp/: temp.txt
(+1206 files in other folders)
