<?xml version="1.0"?>
<package format="2">
  <name>main</name>
  <version>1.0.1</version>
  <description>The main package</description>

  <maintainer email="jakob.murray@marquette.edu">Jake Murray</maintainer>

  <license>BSD</license>

  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
